# openbench-wizard

./: .gitignore  README.md  build.py  build_windows.bat  cli.py  main.py  openbench_wizard.spec  pyproject.toml  requirements.txt  validation_results2.txt  x11_launcher.sh
.github/workflows/: build-windows.yml  build.yml
core/: __init__.py  config_manager.py  connection_manager.py  credential_manager.py  data_validator.py  path_utils.py  remote_runner.py  runner.py  ssh_manager.py  storage.py  sync_engine.py  validation.py
docs/: technical_manual.md
docs/plans/: 2025-12-26-remote-execution-design.md  2025-12-26-remote-execution-implementation.md  2025-12-26-validation-design.md  2025-12-26-validation-implementation.md  2025-12-27-data-validation-design.md  2025-12-27-data-validation-implementation.md  2025-12-29-remote-mode-implementation.md  2025-12-29-remote-mode-redesign.md
tests/: __init__.py  test_connection_manager.py  test_credential_manager.py  test_data_validator.py  test_remote_integration.py  test_ssh_manager.py  test_storage.py  test_sync_engine.py  test_validation.py  test_wizard_config.py
ui/: main_window.py  wizard_controller.py
ui/dialogs/: __init__.py  project_selector.py
ui/pages/: __init__.py  base_page.py  page_comparisons.py  page_evaluation.py  page_general.py  page_metrics.py  page_preview.py  page_ref_data.py  page_run_monitor.py  page_runtime.py  page_scores.py  page_sim_data.py  page_statistics.py
ui/styles/: theme.qss
ui/widgets/: __init__.py  checkbox_group.py  data_source_editor.py  model_definition_editor.py  path_selector.py  (+6 more)
